# rinha-backend-2024

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml  nginx.conf
db/: init.sql
src/: http_status.rs  main.rs  persistence.rs  queue.rs  repositories.rs  types.rs
src/controllers/: statement_controller.rs  transaction_controller.rs
src/dto/: requests.rs  responses.rs
src/dto/requests/: transaction_request.rs
src/dto/responses/: balance_response.rs  extract_response.rs  statement_response.rs  transaction_extract_response.rs  transaction_response.rs
src/http_status/: http_response.rs  http_type.rs
src/model/: account.rs  transaction.rs
src/persistence/: account_repository.rs  database.rs  database_url.rs  statement_repository.rs  transaction_repository.rs
src/repositories/: account_repository.rs  statement_repository.rs  transaction_repository.rs
