[package]
name = "rust-rinha-backend-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.114", features = [] }
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
postgres = { version = "0.19.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
